--- a/src/SwashbucklerDiary.Rcl/SwashbucklerDiary.Rcl.csproj
+++ b/src/SwashbucklerDiary.Rcl/SwashbucklerDiary.Rcl.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="ClosedXML" Version="0.104.0-preview2" />
 		<PackageReference Include="Masa.Blazor" Version="1.6.0-beta.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.2.2" />
 		<PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.6" />
 		<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.*" />
 		<PackageReference Include="Serilog" Version="4.0.0" />
