--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
@@ -32,5 +32,7 @@
   "TagSort": "",
   "LocationSort": "",
   "UpdateNotPrompt": false,
-  "ImageLazy": true
+  "ImageLazy": true,
+  "FirstLineIndent": false,
+  "CodeLineNumber": false
 }
