--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/open-source-project/open-source-project.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/open-source-project/open-source-project.json
@@ -10,6 +10,11 @@
     "Url": "https://github.com/dotnet/aspnetcore/blob/main/LICENSE.txt"
   },
   {
+    "Name": "betterSearch",
+    "License": "MIT license",
+    "Url": "https://github.com/jayZOU/betterSearch/blob/master/LICENSE"
+  },
+  {
     "Name": "Blazored LocalStorage",
     "License": "MIT license",
     "Url": "https://github.com/Blazored/LocalStorage/blob/main/LICENSE"
