--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,9 @@ dotnet_diagnostic.BL0007.severity = none
 dotnet_diagnostic.CS8632.severity = none
 
 [*.cs]
+dotnet_diagnostic.IDE0130.severity = none
+
+[*.cs]
 #### 命名样式 ####
 
 # 命名规则
