--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
@@ -34,5 +34,6 @@
   "UpdateNotPrompt": false,
   "ImageLazy": true,
   "FirstLineIndent": false,
-  "CodeLineNumber": false
+  "CodeLineNumber": false,
+  "TaskListLineThrough": false
 }
