🆕 feat: Diary card display tags

--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/app-functions/app-functions.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/app-functions/app-functions.json
@@ -210,6 +210,12 @@
     "Href": "diaryCardSetting"
   },
   {
+    "Name": "Setting.Display.DiaryCard.Tags.Name",
+    "Icon": "mdi-label-outline",
+    "Path": "Setting.Display.DiaryCard.Tags.Path",
+    "Href": "diaryCardSetting"
+  },
+  {
     "Name": "Setting.Display.DiaryCard.DateFormat.Name",
     "Icon": "mdi-calendar-clock",
     "Path": "Setting.Display.DiaryCard.DateFormat.Path",
