--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
@@ -35,5 +35,6 @@
   "ImageLazy": true,
   "FirstLineIndent": false,
   "CodeLineNumber": false,
-  "TaskListLineThrough": false
+  "TaskListLineThrough": false,
+  "DiaryCardTags": false
 }
