♻️ refactor: weather icon and mood icon new layout new style

--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/app-functions/app-functions.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/app-functions/app-functions.json
@@ -144,6 +144,12 @@
     "Href": "diarySetting"
   },
   {
+    "Name": "Setting.Display.Diary.IconText.Name",
+    "Icon": "mdi-image-text",
+    "Path": "Setting.Display.Diary.IconText.Path",
+    "Href": "diarySetting"
+  },
+  {
     "Name": "Setting.Display.Diary.EditAutoSave.Name",
     "Icon": "mdi-content-save-edit-outline",
     "Path": "Setting.Display.Diary.EditAutoSave.Path",
