--- a/src/SwashbucklerDiary.Maui/SwashbucklerDiary.Maui.csproj
+++ b/src/SwashbucklerDiary.Maui/SwashbucklerDiary.Maui.csproj
@@ -49,7 +49,8 @@
 		<ApplicationId>com.yucore.swashbucklerdiarydebug</ApplicationId>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="$(TargetFramework.Contains('-ios')) and $(TargetFramework.Contains('-maccatalyst'))">
+	<PropertyGroup Condition="$(TargetFramework.Contains('-ios')) or $(TargetFramework.Contains('-maccatalyst'))">
+		<!--https://github.com/dotnet/maui/issues/23577-->
 		<MtouchInterpreter>SqlSugar</MtouchInterpreter>
 	</PropertyGroup>
 
