--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/app-functions/app-functions.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/app-functions/app-functions.json
@@ -144,6 +144,12 @@
     "Href": "diarySetting"
   },
   {
+    "Name": "Setting.Display.Diary.OtherInfo.Name",
+    "Icon": "mdi-information-outline",
+    "Path": "Setting.Display.Diary.OtherInfo.Path",
+    "Href": "diarySetting"
+  },
+  {
     "Name": "Setting.Display.Diary.IconText.Name",
     "Icon": "mdi-image-text",
     "Path": "Setting.Display.Diary.IconText.Path",
