--- a/src/SwashbucklerDiary.Rcl/SwashbucklerDiary.Rcl.csproj
+++ b/src/SwashbucklerDiary.Rcl/SwashbucklerDiary.Rcl.csproj
@@ -9,7 +9,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="ClosedXML" Version="0.104.0-preview2" />
-		<PackageReference Include="Masa.Blazor" Version="1.7.0-beta.5" />
+		<PackageReference Include="Masa.Blazor" Version="1.7.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.*" />
 		<PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.2.2" />
 		<PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.*" />
@@ -17,8 +17,8 @@
 		<PackageReference Include="Serilog" Version="4.0.1" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
 		<PackageReference Include="Serilog.Sinks.Debug" Version="3.0.0" />
-		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.9" />
-		<PackageReference Include="SqlSugarCoreNoDrive" Version="5.1.4.166" />
+		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.10" />
+		<PackageReference Include="SqlSugarCoreNoDrive" Version="5.1.4.167" />
 		<PackageReference Include="TagLibSharp" Version="2.3.0" />
 	</ItemGroup>
 	<ItemGroup>
