🆕 feat(UrlScheme): add Url Scheme Page

--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/app-functions/app-functions.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/app-functions/app-functions.json
@@ -276,6 +276,12 @@
     "Href": "log"
   },
   {
+    "Name": "Url Scheme",
+    "Icon": "mdi-link-variant",
+    "Path": "About.UrlScheme.Path",
+    "Href": "urlScheme"
+  },
+  {
     "Name": "About.Evaluation.Name",
     "Icon": "mdi-star-outline",
     "Path": "About.Evaluation.Path",
