♻️ refactor: Optimized showIconText position

--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/app-functions/app-functions.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/app-functions/app-functions.json
@@ -151,7 +151,7 @@
   },
   {
     "Name": "Setting.Display.Diary.IconText.Name",
-    "Icon": "mdi-image-text",
+    "Icon": "mdi-alphabetical",
     "Path": "Setting.Display.Diary.IconText.Path",
     "Href": "diarySetting"
   },
