--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/app-features/app-features.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/app-features/app-features.json
@@ -167,12 +167,6 @@
     "Href": "diarySetting"
   },
   {
-    "Name": "Setting.Display.Diary.ImageLazy.Name",
-    "Icon": "mdi-image-refresh-outline",
-    "Path": "Setting.Display.Diary.ImageLazy.Path",
-    "Href": "diarySetting"
-  },
-  {
     "Name": "Setting.Display.Diary.FirstLineIndent.Name",
     "Icon": "mdi-format-indent-increase",
     "Path": "Setting.Display.Diary.FirstLineIndent.Path",
@@ -188,6 +182,18 @@
     "Name": "Setting.Display.Diary.TaskListLineThrough.Name",
     "Icon": "mdi-checkbox-blank-off-outline",
     "Path": "Setting.Display.Diary.TaskListLineThrough.Path",
+    "Href": "diarySetting"
+  },
+  {
+    "Name": "Setting.Display.Diary.ImageLazy.Name",
+    "Icon": "mdi-image-refresh-outline",
+    "Path": "Setting.Display.Diary.ImageLazy.Path",
+    "Href": "diarySetting"
+  },
+  {
+    "Name": "Setting.Display.Diary.AutoPlay.Name",
+    "Icon": "mdi-play-outline",
+    "Path": "Setting.Display.Diary.AutoPlay.Path",
     "Href": "diarySetting"
   },
   {
