🐛 fix: Localizing strings not working on iOS/macOS

--- a/src/SwashbucklerDiary.Maui/Platforms/iOS/Info.plist
+++ b/src/SwashbucklerDiary.Maui/Platforms/iOS/Info.plist
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 	<dict>
@@ -48,7 +48,7 @@
 		<key>UIViewControllerBasedStatusBarAppearance</key>
 		<false/>
 		<key>CFBundleDevelopmentRegion</key>
-		<string>zh-CN</string>
+		<string>en-US</string>
 		<key>CFBundleURLTypes</key>
 		<array>
 			<dict>
