--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/app-features/app-features.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/app-features/app-features.json
@@ -46,28 +46,28 @@
     "Icon": "mdi-cloud-sync-outline",
     "Path": "Backups.WebDAV.Path",
     "Href": "backups?tabs=webDAV",
-    "HidePlatforms": [ "Browser" ]
+    "HidePlatforms": [ { "Platform": "Browser" } ]
   },
   {
     "Name": "Backups.Config.Title",
     "Icon": "mdi-cog-sync-outline",
     "Path": "Backups.Config.Path",
     "Href": "backups?tabs=webDAV",
-    "HidePlatforms": [ "Browser" ]
+    "HidePlatforms": [ { "Platform": "Browser" } ]
   },
   {
     "Name": "Backups.Upload.Title",
     "Icon": "mdi-cloud-arrow-up-outline",
     "Path": "Backups.Upload.Path",
     "Href": "backups?tabs=webDAV",
-    "HidePlatforms": [ "Browser" ]
+    "HidePlatforms": [ { "Platform": "Browser" } ]
   },
   {
     "Name": "Backups.Download.Title",
     "Icon": "mdi-cloud-arrow-down-outline",
     "Path": "Backups.Download.Path",
     "Href": "backups?tabs=webDAV",
-    "HidePlatforms": [ "Browser" ]
+    "HidePlatforms": [ { "Platform": "Browser" } ]
   },
   {
     "Name": "Export.Local.Name",
@@ -92,7 +92,7 @@
     "Icon": "mdi-lan",
     "Path": "Export.LAN.Path",
     "Href": "export?tabs=LAN",
-    "HidePlatforms": [ "Browser" ]
+    "HidePlatforms": [ { "Platform": "Browser" } ]
   },
   {
     "Name": "Mine.Achievement.Name",
@@ -319,7 +319,7 @@
     "Icon": "mdi-link-variant",
     "Path": "About.UrlScheme.Path",
     "Href": "urlScheme",
-    "HidePlatforms": [ "Browser" ]
+    "HidePlatforms": [ { "Platform": "Browser" } ]
   },
   {
     "Name": "About.Evaluation.Name",
